# django-simple-factory

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
demo/: settings.py
django_factory/: apps.py  factories.py  mixins.py  tests.py
django_simple_factory/: __init__.py  apps.py  factories.py  mixins.py  tests.py
posts/: factories.py  models.py
posts/migrations/: 0001_initial.py  0002_alter_comment_post.py  0003_nofactorylike.py
