[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-simple-factory"
authors = [{ name = "Ian Kollipara", email = "ian.kollipara@cune.edu" }]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["django", "Faker"]

[project.urls]
"Homepage" = "https://github.com/ikollipara/django-simple-factory"
"Bug Tracker" = "https://github.com/ikollipara/django-simple-factory/issues"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
]

[tool.coverage.report]
include = ["django_simple_factory/*"]
